--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,206 +5,260 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Home"
-    android:background="@drawable/bgcolor_home">
+    android:background="@drawable/background">
 
     <ScrollView
-        android:layout_gravity="center"
-        android:id="@+id/scrollView2"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintVertical_bias="1.0"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" >
 
-        <LinearLayout
-            android:layout_gravity="center"
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:gravity="center_horizontal">
+
 
             <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:src="@drawable/cstlogo" />
+                android:id="@+id/comm"
+                android:layout_width="@dimen/logoImageSize"
+                android:layout_height="@dimen/logoImageSize"
+                android:padding="10dp"
+                app:srcCompat="@drawable/cstlogo" />
 
-            <TextView
-
-                android:id="@+id/textView1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/app_name"
-                android:layout_gravity="center"/>
-
-
-            <TableLayout
-                android:layout_gravity="center"
+        </TableRow>
+            <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                >
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <ImageView
-                        android:id="@+id/imageView2"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:src="@drawable/groundb"
-                        android:layout_gravity="center"/>
-
-                    <ImageView
-                        android:id="@+id/imageView3"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:layout_gravity="center"
-                        android:src="@drawable/maintanance" />
-
-                    <ImageView
-                        android:id="@+id/imageView4"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:layout_gravity="center"
-                        android:src="@drawable/timetable" />
-                </TableRow>
-
-                <TableRow
-                    android:layout_gravity="center"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:id="@+id/textView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="@string/groundbooking" />
-
-                    <TextView
-                        android:id="@+id/textView2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="@string/maintenance" />
-
-                    <TextView
-                        android:id="@+id/textView3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="@string/timetable" />
-                </TableRow>
-
-                <TableRow
-                    android:layout_gravity="center"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <ImageView
-                        android:id="@+id/imageView5"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:src="@drawable/attendance" />
-
-                    <ImageView
-                        android:id="@+id/imageView7"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:src="@drawable/feedback" />
-
-                    <ImageView
-                        android:id="@+id/imageView6"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:src="@drawable/about" />
-                </TableRow>
-
-                <TableRow
-                    android:layout_gravity="center"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:layout_marginBottom="15dp">
 
 
-                    <TextView
-                        android:id="@+id/textView4"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="@string/attendance" />
-
-                    <TextView
-                        android:id="@+id/textView5"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="@string/feedback" />
-
-                    <TextView
-                        android:id="@+id/textView6"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="@string/about" />
-                </TableRow>
-
-                <TableRow
-                    android:layout_gravity="center"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <ImageView
-                        android:id="@+id/imageView10"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:src="@drawable/share" />
-
-                    <ImageView
-                        android:id="@+id/imageView8"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:src="@drawable/rate" />
-
-                    <ImageView
-                        android:id="@+id/imageView9"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:src="@drawable/help1" />
-                </TableRow>
-
-                <TableRow
-                    android:layout_gravity="center"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                <TextView
+                    android:id="@+id/l2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/lcom"
+                    android:textColor="@android:color/black"
+                    android:textStyle="bold"
+                    android:textSize="@dimen/logo_icon"/>
 
 
-                    <TextView
-                        android:id="@+id/textView7"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="@string/shareapp" />
+            </TableRow>
 
-                    <TextView
-                        android:id="@+id/textView8"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="@string/rateapp" />
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal">
 
-                    <TextView
-                        android:id="@+id/textView9"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="@string/help" />
-                </TableRow>
-            </TableLayout>
-        </LinearLayout>
+                <ImageView
+                    android:id="@+id/derm"
+                    android:layout_width="@dimen/gridImageSize"
+                    android:layout_height="@dimen/gridImageSize"
+                    android:padding="10dp"
+                    app:srcCompat="@drawable/football" />
+
+
+                <ImageView
+                    android:id="@+id/emer"
+                    android:layout_width="@dimen/gridImageSize"
+                    android:layout_height="@dimen/gridImageSize"
+                    android:padding="10dp"
+                    app:srcCompat="@drawable/maintanance" />
+
+                <ImageView
+                    android:id="@+id/ent"
+                    android:layout_width="@dimen/gridImageSize"
+                    android:layout_height="@dimen/gridImageSize"
+                    android:padding="10dp"
+                    app:srcCompat="@drawable/time_table" />
+
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:layout_marginBottom="15dp">
+
+                <TextView
+                    android:id="@+id/l4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/lderm"
+                    android:textColor="@android:color/black"/>
+
+                <TextView
+                    android:id="@+id/l5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/lemer"
+                    android:textColor="@android:color/black"/>
+
+                <TextView
+                    android:id="@+id/l6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/lent"
+                    android:textColor="@android:color/black"/>
+
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal">
+
+
+
+                <ImageView
+                    android:id="@+id/fore"
+                    android:layout_width="@dimen/gridImageSize"
+                    android:layout_height="@dimen/gridImageSize"
+                    android:padding="10dp"
+                    app:srcCompat="@drawable/attendance" />
+
+                <ImageView
+                    android:id="@+id/gopd"
+                    android:layout_width="@dimen/gridImageSize"
+                    android:layout_height="@dimen/gridImageSize"
+                    android:padding="10dp"
+                    app:srcCompat="@drawable/feedback" />
+
+                <ImageView
+                    android:id="@+id/gyna"
+                    android:layout_width="@dimen/gridImageSize"
+                    android:layout_height="@dimen/gridImageSize"
+                    android:padding="10dp"
+                    app:srcCompat="@drawable/about" />
+
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:layout_marginBottom="15dp">
+
+                <TextView
+                    android:id="@+id/l7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/lfore"
+                    android:textColor="@android:color/black"/>
+
+                <TextView
+                    android:id="@+id/l8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/lopd"
+                    android:textColor="@android:color/black"/>
+
+                <TextView
+                    android:id="@+id/l9"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/lgyna"
+                    android:textColor="@android:color/black"/>
+
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal">
+
+                <ImageView
+                    android:id="@+id/medc"
+                    android:layout_width="@dimen/gridImageSize"
+                    android:layout_height="@dimen/gridImageSize"
+                    android:padding="10dp"
+                    app:srcCompat="@drawable/share" />
+
+                <ImageView
+                    android:id="@+id/opth"
+                    android:layout_width="@dimen/gridImageSize"
+                    android:layout_height="@dimen/gridImageSize"
+                    android:padding="10dp"
+                    app:srcCompat="@drawable/rate" />
+
+                <ImageView
+                    android:id="@+id/ortp"
+                    android:layout_width="@dimen/gridImageSize"
+                    android:layout_height="@dimen/gridImageSize"
+                    android:padding="10dp"
+                    app:srcCompat="@drawable/help" />
+
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:layout_marginBottom="15dp">
+
+                <TextView
+                    android:id="@+id/l10"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/lmed"
+                    android:textColor="@android:color/black"/>
+
+                <TextView
+                    android:id="@+id/l11"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/lopth"
+                    android:textColor="@android:color/black"/>
+
+                <TextView
+                    android:id="@+id/l12"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/lortho"
+                    android:textColor="@android:color/black"/>
+
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal">
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/bottomRowSpace_mainScreen" />
+            </TableRow>
+
+        </TableLayout>
+
+
     </ScrollView>
+
 </android.support.constraint.ConstraintLayout>
