commmited changes from deoika and resolves some issuess

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".register"
-    android:background="@drawable/bgcolor_home">
+    android:background="@drawable/background">
 
     <ScrollView
         android:layout_width="match_parent"
