--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -77,7 +77,7 @@
 
 
                 <ImageView
-                    android:id="@+id/emer"
+                    android:id="@+id/maintain"
                     android:layout_width="@dimen/gridImageSize"
                     android:layout_height="@dimen/gridImageSize"
                     android:padding="10dp"
@@ -199,7 +199,7 @@
                     app:srcCompat="@drawable/share" />
 
                 <ImageView
-                    android:id="@+id/opth"
+                    android:id="@+id/rate"
                     android:layout_width="@dimen/gridImageSize"
                     android:layout_height="@dimen/gridImageSize"
                     android:padding="10dp"
