--- a/app/src/main/res/layout/activity_maintain.xml
+++ b/app/src/main/res/layout/activity_maintain.xml
@@ -22,7 +22,7 @@
 
     <EditText
         android:layout_marginTop="20dp"
-        android:id="@+id/phoneMaintain"
+        android:id="@+id/phone"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:hint="@string/phone_number"
@@ -30,7 +30,7 @@
 
     <EditText
         android:layout_marginTop="30dp"
-        android:id="@+id/problem"
+        android:id="@+id/descript"
         android:autofillHints="tubelight not working or fan not working"
         android:layout_width="match_parent"
         android:layout_height="140dp"
@@ -39,7 +39,7 @@
 
     <Button
         android:layout_marginTop="20dp"
-        android:id="@+id/button"
+        android:id="@+id/submit"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:text="@string/submit" />
