--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -64,6 +64,7 @@
 
             <!--- Home Icons Layout -->
             <TableRow
+                android:paddingTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
@@ -88,14 +89,10 @@
                     android:layout_weight="1"
                     app:srcCompat="@drawable/attendance" />
 
-
-
-
-
-
             </TableRow>
 
             <TableRow
+                android:paddingTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1">
@@ -127,6 +124,7 @@
             </TableRow>
 
             <TableRow
+                android:paddingTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal">
@@ -158,6 +156,7 @@
             </TableRow>
 
             <TableRow
+                android:paddingTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1">
@@ -189,6 +188,7 @@
             </TableRow>
 
             <TableRow
+                android:paddingTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal">
@@ -217,6 +217,7 @@
             </TableRow>
 
             <TableRow
+                android:paddingTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1">
