--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -83,7 +83,7 @@
                     android:layout_weight="1"
                     app:srcCompat="@drawable/time_table" />
                 <ImageView
-                    android:id="@+id/fore"
+                    android:id="@+id/attendance"
                     android:layout_width="0dp"
                     android:layout_height="@dimen/gridImageSize"
                     android:layout_weight="1"
