--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -147,7 +147,7 @@
                 app:srcCompat="@drawable/football" />
 
                 <ImageView
-                    android:id="@+id/gyna"
+                    android:id="@+id/about"
                     android:layout_width="0dp"
                     android:layout_height="@dimen/gridImageSize"
                     android:layout_weight="1"
@@ -194,7 +194,7 @@
                 android:gravity="center_horizontal">
 
                 <ImageView
-                    android:id="@+id/medc"
+                    android:id="@+id/share"
                     android:layout_width="0dp"
                     android:layout_height="@dimen/gridImageSize"
                     android:layout_weight="1"
